--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,7 +132,7 @@ section {
     font-weight: 400;
 }
 
-.btn.blue{
+.btn.blue {
     color: #f7f7fc;
     background-color: #00308F;
     border-radius: 50px;
@@ -151,7 +151,7 @@ section {
 }
 
 .btn:hover {
-    background: var(--color-gray-900);
+    background: var(--color-green);
     color: var(--color-white);
 }
 
@@ -244,7 +244,9 @@ footer {
 }
 
 /* =====================Posts==================== */
-.posts__container {
+.posts__container,
+.author_posts__container,
+.category_posts__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 4rem;
@@ -273,7 +275,7 @@ footer {
     margin-top: 1.5rem;
 }
 
-.Description{
+.Description {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -310,15 +312,171 @@ footer {
     padding: 2rem 0;
 }
 
-.post-detail__header{
+.post-detail__header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5rem;
 }
 
-.post-detail__buttons{
+.post-detail__buttons {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
 
+/* ============== REGISTER & Form =============*/
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+input,
+select,
+textarea {
+    width: 100%;
+    padding: 0.6rem 1rem;
+    border-radius: var(--radius-1);
+    resize: none;
+}
+
+.form__error-message {
+    background: var(--color-red);
+    color: var(--color-white);
+    font-size: 0.8rem;
+    padding: 0.6rem 1rem;
+    border-radius: var(--radius-1);
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.register,
+.login,
+.create-post {
+    width: var(--form-width);
+    margin-inline: auto;
+    height: calc(100vh - 12rem);
+    display: grid;
+    place-items: center;
+}
+
+.register h2,
+.login h2,
+.create-post h2 {
+    margin-bottom: 2rem;
+}
+
+.register small,
+.login small {
+    display: block;
+    margin-top: 1.5rem;
+}
+
+.register small a,
+.login small a {
+    color: var(--color-primary);
+}
+
+/* ================= Authors ========================= */
+.authors__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+}
+
+.author {
+    background: var(--color-white);
+    padding: 1rem;
+    border-radius: var(--radius-3);
+    display: flex;
+    gap: 1rem;
+    transition: var(--transition);
+}
+
+.author:hover {
+    box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.07);
+}
+
+.author__avatar {
+    width: 5rem;
+    aspect-ratio: 1/1;
+    border-radius: 70%;
+    border: 0.3rem solid var(--color-bg);
+    overflow: hidden;
+}
+
+.author__info p {
+    margin-top: 1rem;
+}
+
+/* =======USER PROFILE======== */
+.profile__container{
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
+
+.avatar__wrapper {
+    width: 15rem;
+    aspect-ratio: 1/1;
+    position: relative;
+    margin-inline: auto;
+    margin-top: 1rem;
+}
+
+.profile__avatar{
+    border-radius:70%;
+    border: 1rem solid var(--color-white);
+    overflow: hidden;
+}
+
+.avatar__form{
+    height: 1rem;
+}
+
+.profile__name{
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+.form.profile__form{
+    margin-top: 3rem;
+    margin-inline: auto;
+    width: var(--form-width);
+} 
+
+/* 
+
+
+
+
+.avatar__form input{
+    visibility: hidden;
+}
+
+.avatar__form, .profile__avatar-btn{
+    background: var(--color-gray-900);
+    color: var(--color-white);
+    font-size: 1.3rem;
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    left: 55%;
+    bottom: 58%;
+}
+
+.profile__avatar-btn{
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0;
+    background: var(--color-green)
+}
+
+.profile__details h1 {
+    margin-top: 1.5rem;
+}
+
+ */
