--- a/client/src/index.css
+++ b/client/src/index.css
@@ -153,6 +153,7 @@ section {
 .btn:hover {
     background: var(--color-green);
     color: var(--color-white);
+    border-radius: 50%;
 }
 
 /* ===========NavBar========= */
@@ -377,6 +378,12 @@ textarea {
     color: var(--color-primary);
 }
 
+.ql-editor {
+    overflow: scroll;
+    background: var(--color-white);
+    height: 10rem !important
+}
+
 /* ================= Authors ========================= */
 .authors__container {
     display: grid;
@@ -410,7 +417,8 @@ textarea {
 }
 
 /* =======USER PROFILE======== */
-.profile__container{
+
+.profile__container {
     display: grid;
     place-items: center;
     text-align: center;
@@ -424,59 +432,174 @@ textarea {
     margin-top: 1rem;
 }
 
-.profile__avatar{
-    border-radius:70%;
+.profile__avatar {
+    border-radius: 70%;
     border: 1rem solid var(--color-white);
     overflow: hidden;
 }
 
-.avatar__form{
+.avatar__form {
     height: 1rem;
 }
 
-.profile__name{
+.profile__name {
     margin-top: 3rem;
     margin-bottom: 0.5rem;
 }
 
-.form.profile__form{
+.form.profile__form {
     margin-top: 3rem;
     margin-inline: auto;
     width: var(--form-width);
-} 
-
-/* 
-
-
-
-
-.avatar__form input{
-    visibility: hidden;
 }
 
-.avatar__form, .profile__avatar-btn{
-    background: var(--color-gray-900);
-    color: var(--color-white);
-    font-size: 1.3rem;
-    position: absolute;
-    width: 3rem;
-    height: 3rem;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    left: 55%;
-    bottom: 58%;
+
+/* ======= DASHBOARD ======== */
+
+.dashboard__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
 }
 
-.profile__avatar-btn{
-    font-size: 1.5rem;
-    cursor: pointer;
-    padding: 0;
-    background: var(--color-green)
+.dashboard__post {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    background: var(--color-white);
+    padding: 0.5rem 1.2rem;
+    border-radius: var(--radius-3);
 }
 
-.profile__details h1 {
-    margin-top: 1.5rem;
+.dashboard__post-info {
+    display: flex;
+    gap: 2rem;
+    width: 100;
+    align-items: center;
 }
 
- */
+.dashboard__post-thumbnail {
+    width: 4rem;
+    border-radius: var(--radius-1);
+    overflow: hidden;
+}
+
+.dashboard__post-actions {
+    display: flex;
+    gap: 1rem;
+}
+
+
+/* ============================ MEDIA QUERIES (small devices) ================= */
+
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.6rem;
+    }
+
+    h3 {
+        font-size: 1.35rem;
+    }
+
+    .container {
+        width: var(--contatiner-width-md);
+    }
+
+    /* NAVBAR */
+
+    .nav__container {
+        position: relative;
+    }
+
+    .nav__menu {
+        position: absolute;
+        top: 5rem;
+        right: 0;
+        flex-direction: column;
+        gap: 0;
+    }
+
+
+    .nav__menu li {
+        width: 100%;
+        box-shadow: -2rem 4 rem 4 rem rgba(0. 0., 0, 0.26);
+        animation: dropDown 800ms ease forwards;
+        opacity: 0;
+        transform: rotateX(90deg);
+        transform-origin: top
+    }
+
+    @keyframes dropDown {
+        to {
+            opacity: 1;
+            transform: rotateX(0);
+        }
+    }
+
+    .nav__menu li a {
+        display: block;
+        background: var(--color-white);
+        padding: 0.75rem 2.5rem;
+    }
+
+    .nav__toggle-btn {
+        display: inline-block;
+        background: var(--color-white);
+        padding: 0.85rem 2.5rem;
+    }
+
+    .nav__toggle-btn {
+        display: inline-block;
+        background: transparent;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+    .posts__container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+    .footer__categories {
+        flex-direction: column;
+    }
+
+    .post-detail {
+        width: 100%;
+        background: transparent;
+        padding: 0;
+    }
+
+    .register,
+    .login,
+    .create-post {
+        width: 100%;
+    }
+
+    .form.profile__form {
+        margin-top: 2.5rem;
+        width: 100%;
+    }
+
+    .authors__container {
+        grid-template-columns: 1fr;
+        gap: 1.2rem;
+    }
+
+    .dashboard__post {
+        flex-direction: column;
+    }
+
+    .dashboard__post-info {
+        gap: 1.5rem;
+    }
+
+    .dashboard__post-thumbnail {
+        width: 5rem;
+    }
+}
