--- a/client/src/index.css
+++ b/client/src/index.css
@@ -401,7 +401,7 @@ textarea {
 }
 
 /* ================= Authors ========================= */
-.authors__container {
+.authors_container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 3rem;
@@ -420,7 +420,7 @@ textarea {
     box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.07);
 }
 
-.author__avatar {
+.author_avatar {
     width: 5rem;
     aspect-ratio: 1/1;
     border-radius: 70%;
@@ -428,7 +428,7 @@ textarea {
     overflow: hidden;
 }
 
-.author__info p {
+.author_info p {
     margin-top: 1rem;
 }
 
@@ -642,7 +642,7 @@ textarea {
         width: 100%;
     }
 
-    .authors__container {
+    .authors_container {
         grid-template-columns: 1fr;
         gap: 1.2rem;
     }
